--- a/Level1/Unit1/Dialogo/index.html
+++ b/Level1/Unit1/Dialogo/index.html
@@ -157,6 +157,13 @@
         <button class="nav-button" onclick="nextDialogue()">Forward &gt;&gt;</button>
     </div>
 
+    <div id="completion-modal" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: white; padding: 20px; border: 2px solid #333; box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); z-index: 1000; text-align: center;">
+        <h2>Phase Completed!</h2>
+        <p>Congratulations! You have completed this phase.</p>
+        <button onclick="closeModal()">Close</button>
+    </div>
+    <div id="overlay" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5); z-index: 999;"></div>
+
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
@@ -164,10 +171,14 @@
     <script>
         // Configuração do Firebase
         const firebaseConfig = {
-            apiKey: "...",
+            apiKey: "AIzaSyDGgo2H_hDKXF88xNnLFNUj8ikMY7Xdc",
             authDomain: "hannahenglishcourse.firebaseapp.com",
             databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app",
-            // demais configurações...
+            projectId: "hannahenglishcourse",
+            storageBucket: "hannahenglishcourse.appspot.com",
+            messagingSenderId: "449818788486",
+            appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
+            measurementId: "G-07VVJG9LRS"
         };
         firebase.initializeApp(firebaseConfig);
 
@@ -255,8 +266,19 @@
 
         function checkCompletion() {
             if (dialoguesRead === totalDialogues) {
+                showModal();
                 ensureUserIsAuthenticated(updateNextPhase);
             }
+        }
+
+        function showModal() {
+            document.getElementById('completion-modal').style.display = 'block';
+            document.getElementById('overlay').style.display = 'block';
+        }
+
+        function closeModal() {
+            document.getElementById('completion-modal').style.display = 'none';
+            document.getElementById('overlay').style.display = 'none';
         }
 
         function ensureUserIsAuthenticated(callback) {
@@ -265,6 +287,7 @@
                     callback(user.uid);
                 } else {
                     console.error("Usuário não autenticado");
+                    // Redirecionar para a página de login ou tratar autenticação
                 }
             });
         }
@@ -276,7 +299,6 @@
             try {
                 const nextPhase = currentDialogueIndex + 1;
                 await dbRef.update({ [`fase${nextPhase}`]: true });
-                alert("Congratulations! You have completed this phase.");
             } catch (error) {
                 console.error("Erro ao atualizar o progresso da fase:", error);
             }
