--- a/Level1/Unit1/Dialogo/index.html
+++ b/Level1/Unit1/Dialogo/index.html
@@ -144,7 +144,7 @@
         </div>
 
         <div class="character" id="student">
-            <img src="../../../../../imagens/avatar_aluno1.png" alt="Student Avatar">
+            <img id="student-img" src="../../../../../imagens/avatar_aluno1.png" alt="Student Avatar">
             <div class="character-text" id="student-text"></div>
             <div class="audio-button-container">
                 <button class="audio-button" id="student-audio-button">🔊</button>
@@ -184,6 +184,7 @@
 
         let idleTimer;
         let robotImg = document.getElementById('robot-img');
+        let studentImg = document.getElementById('student-img');
         let totalDialogues;
         let dialoguesRead = 0;
 
@@ -284,12 +285,27 @@
         function ensureUserIsAuthenticated(callback) {
             firebase.auth().onAuthStateChanged(function(user) {
                 if (user) {
+                    fetchUserAvatar(user.uid);
                     callback(user.uid);
                 } else {
                     console.error("Usuário não autenticado");
                     // Redirecionar para a página de login ou tratar autenticação
                 }
             });
+        }
+
+        function fetchUserAvatar(userId) {
+            const avatarRef = firebase.database().ref(`usuarios/${userId}/avatar`);
+            avatarRef.once('value')
+                .then(snapshot => {
+                    const avatarUrl = snapshot.val();
+                    if (avatarUrl) {
+                        studentImg.src = avatarUrl; // Usa o avatar do usuário se ele existir no banco de dados
+                    }
+                })
+                .catch(error => {
+                    console.error("Erro ao buscar o avatar do usuário:", error);
+                });
         }
 
         async function updateNextPhase(userId) {
