--- a/Level1/Unit1/Dialogo/index.html
+++ b/Level1/Unit1/Dialogo/index.html
@@ -188,6 +188,10 @@
         let totalDialogues;
         let dialoguesRead = 0;
 
+        window.onload = function() {
+            initializeUser();
+        };
+
         function goBack() {
             window.history.back();
         }
@@ -268,7 +272,7 @@
         function checkCompletion() {
             if (dialoguesRead === totalDialogues) {
                 showModal();
-                ensureUserIsAuthenticated(updateNextPhase);
+                updateNextPhase();
             }
         }
 
@@ -282,16 +286,13 @@
             document.getElementById('overlay').style.display = 'none';
         }
 
-        function ensureUserIsAuthenticated(callback) {
-            firebase.auth().onAuthStateChanged(function(user) {
-                if (user) {
-                    fetchUserAvatar(user.uid);
-                    callback(user.uid);
-                } else {
-                    console.error("Usuário não autenticado");
-                    // Redirecionar para a página de login ou tratar autenticação
-                }
-            });
+        function initializeUser() {
+            const user = firebase.auth().currentUser;
+            if (user) {
+                fetchUserAvatar(user.uid);
+            } else {
+                console.error("Usuário não autenticado.");
+            }
         }
 
         function fetchUserAvatar(userId) {
@@ -308,15 +309,21 @@
                 });
         }
 
-        async function updateNextPhase(userId) {
-            const { level, unit } = getLevelAndUnitFromURL();
-            const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
+        async function updateNextPhase() {
+            const user = firebase.auth().currentUser;
+            if (user) {
+                const userId = user.uid;
+                const { level, unit } = getLevelAndUnitFromURL();
+                const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
 
-            try {
-                const nextPhase = currentDialogueIndex + 1;
-                await dbRef.update({ [`fase${nextPhase}`]: true });
-            } catch (error) {
-                console.error("Erro ao atualizar o progresso da fase:", error);
+                try {
+                    const nextPhase = currentDialogueIndex + 1;
+                    await dbRef.update({ [`fase${nextPhase}`]: true });
+                } catch (error) {
+                    console.error("Erro ao atualizar o progresso da fase:", error);
+                }
+            } else {
+                console.error("Usuário não autenticado. Não foi possível atualizar o progresso.");
             }
         }
 
