--- a/Level1/Unit1/Dialogo/index.html
+++ b/Level1/Unit1/Dialogo/index.html
@@ -188,9 +188,16 @@
         let totalDialogues;
         let dialoguesRead = 0;
 
-        window.onload = function() {
-            initializeUser();
-        };
+        firebase.auth().onAuthStateChanged(function(user) {
+            if (user) {
+                // Usuário está autenticado, buscar avatar e inicializar a página
+                fetchUserAvatar(user.uid);
+                initializeDialogue();
+            } else {
+                console.error("Usuário não autenticado.");
+                // Tratar o caso de usuário não autenticado (ex.: redirecionar para login)
+            }
+        });
 
         function goBack() {
             window.history.back();
@@ -215,14 +222,15 @@
             window.speechSynthesis.speak(utterance);
         }
 
-        let dialogues = [];
-        fetch('dialogo.txt')
-            .then(response => response.text())
-            .then(text => {
-                dialogues = text.split('\n\n');
-                totalDialogues = dialogues.length * 2; // Duas falas por diálogo (robô e aluno)
-                updateDialogue(0);
-            });
+        function initializeDialogue() {
+            fetch('dialogo.txt')
+                .then(response => response.text())
+                .then(text => {
+                    dialogues = text.split('\n\n');
+                    totalDialogues = dialogues.length * 2; // Duas falas por diálogo (robô e aluno)
+                    updateDialogue(0);
+                });
+        }
 
         let currentDialogueIndex = 0;
 
@@ -284,15 +292,6 @@
         function closeModal() {
             document.getElementById('completion-modal').style.display = 'none';
             document.getElementById('overlay').style.display = 'none';
-        }
-
-        function initializeUser() {
-            const user = firebase.auth().currentUser;
-            if (user) {
-                fetchUserAvatar(user.uid);
-            } else {
-                console.error("Usuário não autenticado.");
-            }
         }
 
         function fetchUserAvatar(userId) {
