--- a/Level1/Unit1/Dialogo/index.html
+++ b/Level1/Unit1/Dialogo/index.html
@@ -157,13 +157,6 @@
         <button class="nav-button" onclick="nextDialogue()">Forward &gt;&gt;</button>
     </div>
 
-    <div id="completion-modal" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: white; padding: 20px; border: 2px solid #333; box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); z-index: 1000; text-align: center;">
-        <h2>Phase Completed!</h2>
-        <p>Congratulations! You have completed this phase.</p>
-        <button onclick="closeModal()">Close</button>
-    </div>
-    <div id="overlay" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5); z-index: 999;"></div>
-
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
@@ -171,34 +164,33 @@
     <script>
         // Configuração do Firebase
         const firebaseConfig = {
-            apiKey: "AIzaSyDGgo2H_hDKXF88xNnLFNUj8ikMY7Xdc",
+            apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
             authDomain: "hannahenglishcourse.firebaseapp.com",
-            databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app",
             projectId: "hannahenglishcourse",
             storageBucket: "hannahenglishcourse.appspot.com",
             messagingSenderId: "449818788486",
             appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
-            measurementId: "G-07VVJG9LRS"
+            measurementId: "G-07VVJG9LRS",
+            databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
         };
+
         firebase.initializeApp(firebaseConfig);
 
-        let idleTimer;
         let robotImg = document.getElementById('robot-img');
         let studentImg = document.getElementById('student-img');
         let totalDialogues;
         let dialoguesRead = 0;
 
-        document.addEventListener('DOMContentLoaded', function() {
-            // Certificar que o Firebase foi inicializado antes de verificar a autenticação
-            firebase.auth().onAuthStateChanged(function(user) {
-                if (user) {
-                    // Usuário está autenticado, buscar avatar e inicializar a página
-                    fetchUserAvatar(user.uid);
-                    initializeDialogue();
-                } else {
-                    console.error("Usuário não autenticado.");
-                }
-            });
+        firebase.auth().onAuthStateChanged(function(user) {
+            if (user) {
+                console.log("Usuário autenticado:", user.displayName);
+                fetchUserAvatar(user.uid);
+                initializeDialogue();
+            } else {
+                console.error("Usuário não autenticado.");
+                // Redirecionar para a página de login se o usuário não estiver autenticado
+                window.location.href = '/login.html';
+            }
         });
 
         function goBack() {
@@ -286,16 +278,6 @@
             }
         }
 
-        function showModal() {
-            document.getElementById('completion-modal').style.display = 'block';
-            document.getElementById('overlay').style.display = 'block';
-        }
-
-        function closeModal() {
-            document.getElementById('completion-modal').style.display = 'none';
-            document.getElementById('overlay').style.display = 'none';
-        }
-
         function fetchUserAvatar(userId) {
             const avatarRef = firebase.database().ref(`usuarios/${userId}/avatar`);
             avatarRef.once('value')
@@ -310,19 +292,21 @@
                 });
         }
 
-        async function updateNextPhase() {
+        function updateNextPhase() {
             const user = firebase.auth().currentUser;
             if (user) {
                 const userId = user.uid;
                 const { level, unit } = getLevelAndUnitFromURL();
                 const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
 
-                try {
-                    const nextPhase = currentDialogueIndex + 1;
-                    await dbRef.update({ [`fase${nextPhase}`]: true });
-                } catch (error) {
-                    console.error("Erro ao atualizar o progresso da fase:", error);
-                }
+                const nextPhase = currentDialogueIndex + 1;
+                dbRef.update({ [`fase${nextPhase}`]: true })
+                    .then(() => {
+                        console.log("Progresso atualizado com sucesso.");
+                    })
+                    .catch(error => {
+                        console.error("Erro ao atualizar o progresso da fase:", error);
+                    });
             } else {
                 console.error("Usuário não autenticado. Não foi possível atualizar o progresso.");
             }
@@ -335,8 +319,6 @@
             const unit = parts[2];
             return { level, unit };
         }
-
-        startIdleTimer();
     </script>
 </body>
 </html>
