--- a/Level1/Unit1/Dialogo/index.html
+++ b/Level1/Unit1/Dialogo/index.html
@@ -176,6 +176,7 @@
 
         firebase.initializeApp(firebaseConfig);
 
+        let idleTimer;
         let robotImg = document.getElementById('robot-img');
         let studentImg = document.getElementById('student-img');
         let totalDialogues;
@@ -188,7 +189,6 @@
                 initializeDialogue();
             } else {
                 console.error("Usuário não autenticado.");
-                // Redirecionar para a página de login se o usuário não estiver autenticado
                 window.location.href = '/login.html';
             }
         });
@@ -284,7 +284,14 @@
                 .then(snapshot => {
                     const avatarUrl = snapshot.val();
                     if (avatarUrl) {
-                        studentImg.src = avatarUrl; // Usa o avatar do usuário se ele existir no banco de dados
+                        const img = new Image();
+                        img.src = avatarUrl;
+                        img.onload = function() {
+                            studentImg.src = avatarUrl; // Usa o avatar do usuário se ele existir no banco de dados e estiver acessível
+                        };
+                        img.onerror = function() {
+                            console.error("Erro ao carregar o avatar do usuário. Usando o avatar padrão.");
+                        };
                     }
                 })
                 .catch(error => {
