--- a/Level1/Unit1/Dialogo/index.html
+++ b/Level1/Unit1/Dialogo/index.html
@@ -96,6 +96,44 @@
             max-width: 200px;
         }
 
+        #completion-modal {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: white;
+            padding: 20px;
+            border: 2px solid #333;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            z-index: 1000;
+            text-align: center;
+        }
+
+        #completion-modal button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #333;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+
+        #completion-modal button:hover {
+            background-color: #555;
+        }
+
+        #overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 999;
+        }
+
         h1 {
             text-align: center;
             font-size: 2em;
@@ -155,6 +193,13 @@
     <div id="navigation">
         <button class="nav-button" onclick="previousDialogue()">&lt;&lt; Back</button>
         <button class="nav-button" onclick="nextDialogue()">Forward &gt;&gt;</button>
+    </div>
+
+    <div id="overlay"></div>
+    <div id="completion-modal">
+        <h2>Phase Completed!</h2>
+        <p>Congratulations! You have completed this phase.</p>
+        <button onclick="closeModal()">Close</button>
     </div>
 
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
@@ -278,6 +323,16 @@
             }
         }
 
+        function showModal() {
+            document.getElementById('completion-modal').style.display = 'block';
+            document.getElementById('overlay').style.display = 'block';
+        }
+
+        function closeModal() {
+            document.getElementById('completion-modal').style.display = 'none';
+            document.getElementById('overlay').style.display = 'none';
+        }
+
         function fetchUserAvatar(userId) {
             const avatarRef = firebase.database().ref(`usuarios/${userId}`);
             avatarRef.once('value')
@@ -310,8 +365,7 @@
                 const { level, unit } = getLevelAndUnitFromURL();
                 const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
 
-                const nextPhase = currentDialogueIndex + 1;
-                dbRef.update({ [`fase${nextPhase}`]: true })
+                dbRef.update({ [`fase${currentDialogueIndex + 1}`]: true })
                     .then(() => {
                         console.log("Progresso atualizado com sucesso.");
                     })
