--- a/Level1/Unit1/Dialogo/index.html
+++ b/Level1/Unit1/Dialogo/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,59 +6,94 @@
     <title>Hannah Conversation</title>
     <style>
         body {
+            background-image: url('../../../../../imagens/fundo.png');
+            background-repeat: repeat;
             font-family: Arial, sans-serif;
             display: flex;
             flex-direction: column;
-            justify-content: flex-start;
             align-items: center;
-            min-height: 100vh;
-            background-image: url('../../../../imagens/fundo.png');
-            background-repeat: repeat;
             margin: 0;
+        }
+
+        #header {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            position: relative;
             padding: 20px;
         }
 
-        .header-container {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
-            width: 100%;
-            max-width: 1000px;
-            margin-bottom: 20px;
-        }
-
-        h1 {
-            font-size: 2em;
-            margin: 0;
-            text-align: center;
-            color: #333;
-            flex-grow: 1;
-        }
-
         .back-button {
-            padding: 10px 20px;
-            background-color: #333;
+            background-color: black;
             color: white;
             border: none;
+            padding: 10px 20px;
+            font-size: 16px;
             cursor: pointer;
-            margin-right: 20px;
-            align-self: flex-start;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+            position: relative;
+            margin-bottom: 30px;
         }
 
-        .back-button:hover {
-            background-color: #555;
+        #dialogue-container {
+            display: flex;
+            align-items: flex-start;
+            justify-content: center;
+            flex-wrap: nowrap;
+            margin: 20px;
+            max-width: 100%;
+            gap: 20px;
         }
 
-        #overlay {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
+        .character {
+            margin: 20px;
+            text-align: center;
+            flex: 1 1 300px;
+        }
+
+        .character img {
             width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            z-index: 999;
+            max-width: 150px;
+            height: auto;
+            border-radius: 50%;
+        }
+
+        .character-text {
+            font-size: 20px;
+            font-weight: bold;
+            background-color: #ffffff;
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+            max-width: 90%;
+            position: relative;
+        }
+
+        .audio-button-container {
+            margin-top: 10px;
+        }
+
+        #navigation {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            margin: 20px;
+            width: 100%;
+        }
+
+        .nav-button {
+            background-color: green;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+            margin: 10px;
+            flex: 1;
+            max-width: 200px;
         }
 
         #completion-modal {
@@ -88,29 +123,77 @@
             background-color: #555;
         }
 
+        #overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 999;
+        }
+
+        h1 {
+            text-align: center;
+            font-size: 2em;
+            margin: 20px;
+        }
+
         @media (max-width: 600px) {
-            .header-container {
-                flex-direction: column;
-                align-items: flex-start;
-            }
-
-            h1 {
-                text-align: center;
-                margin-top: 10px;
-            }
-
             .back-button {
-                margin-bottom: 10px;
+                font-size: 14px;
+                padding: 8px 16px;
+            }
+
+            .nav-button {
+                font-size: 14px;
+                padding: 8px 16px;
+            }
+
+            .character {
+                flex: 1 1 100%;
+                margin: 10px 0;
+            }
+
+            .character-text {
+                font-size: 16px;
+            }
+
+            #dialogue-container {
+                flex-wrap: wrap;
             }
         }
     </style>
 </head>
 <body>
-    <div class="header-container">
+    <div id="header">
         <button class="back-button" onclick="goBack()">Back</button>
         <h1>Hannah Conversation</h1>
     </div>
-    <div id="conversation-container"></div>
+
+    <div id="dialogue-container">
+        <div class="character" id="robot">
+            <img id="robot-img" src="../../../../../imagens/robo1_static.png" alt="Robot Lex">
+            <div class="character-text" id="robot-text"></div>
+            <div class="audio-button-container">
+                <button class="audio-button" id="robot-audio-button">🔊</button>
+            </div>
+        </div>
+
+        <div class="character" id="student">
+            <img id="student-img" src="../../../../../imagens/avatar_aluno1.png" alt="Student Avatar">
+            <div class="character-text" id="student-text"></div>
+            <div class="audio-button-container">
+                <button class="audio-button" id="student-audio-button">🔊</button>
+            </div>
+        </div>
+    </div>
+
+    <div id="navigation">
+        <button class="nav-button" onclick="previousDialogue()">&lt;&lt; Back</button>
+        <button class="nav-button" onclick="nextDialogue()">Forward &gt;&gt;</button>
+    </div>
 
     <div id="overlay"></div>
     <div id="completion-modal">
@@ -124,8 +207,9 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
     <script>
+        // Configuração do Firebase
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
+            apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
             authDomain: "hannahenglishcourse.firebaseapp.com",
             projectId: "hannahenglishcourse",
             storageBucket: "hannahenglishcourse.appspot.com",
@@ -137,100 +221,106 @@
 
         firebase.initializeApp(firebaseConfig);
 
-        firebase.auth().onAuthStateChanged(function (user) {
+        let idleTimer;
+        let robotImg = document.getElementById('robot-img');
+        let studentImg = document.getElementById('student-img');
+        let totalDialogues;
+        let dialoguesRead = 0;
+
+        firebase.auth().onAuthStateChanged(function(user) {
             if (user) {
-                const userId = user.uid;
-                loadUserAvatar(userId);
+                console.log("Usuário autenticado:", user.displayName);
+                fetchUserAvatar(user.uid);
+                initializeDialogue();
             } else {
                 console.error("Usuário não autenticado.");
+                window.location.href = '/login.html';
             }
         });
 
-        function loadUserAvatar(userId) {
-            const database = firebase.database();
-            database.ref('/usuarios/' + userId).once('value').then(snapshot => {
-                const userData = snapshot.val();
-                const userAvatar = userData.avatar ? `../../../../imagens/${userData.avatar}` : '../../../../imagens/bonequinho.png';
-                renderAvatar(userAvatar);
-            }).catch(error => {
-                console.error("Erro ao carregar o avatar do usuário. Usando o avatar padrão.", error);
-                renderAvatar('../../../../imagens/bonequinho.png');
-            });
+        function goBack() {
+            window.history.back();
         }
 
-        function renderAvatar(avatarPath) {
-            const container = document.getElementById('conversation-container');
-            container.innerHTML = `
-                <div class="conversation">
-                    <img src="${avatarPath}" alt="Student Avatar">
-                    <p>Hi! I'm a student.</p>
-                </div>
-            `;
+        function speakText(text, callback) {
+            clearTimeout(idleTimer);
+            const utterance = new SpeechSynthesisUtterance(text);
+            utterance.lang = 'en-US';
+            utterance.onstart = function() {
+                robotImg.src = '../../../../../imagens/robo1.gif';
+            };
+            utterance.onend = function() {
+                robotImg.src = '../../../../../imagens/robo1_static.png';
+                if (callback) {
+                    callback();
+                }
+                dialoguesRead++;
+                checkCompletion();
+                startIdleTimer();
+            };
+            window.speechSynthesis.speak(utterance);
+        }
+
+        function initializeDialogue() {
+            fetch('dialogo.txt')
+                .then(response => response.text())
+                .then(text => {
+                    dialogues = text.split('\n\n');
+                    totalDialogues = dialogues.length * 2; // Duas falas por diálogo (robô e aluno)
+                    updateDialogue(0);
+                });
+        }
+
+        let currentDialogueIndex = 0;
+
+        function updateDialogue(index) {
+            const lines = dialogues[index].split('\n');
+            const robotText = lines[0] || '';
+            const studentText = lines[1] || '';
+
+            document.getElementById('robot-text').textContent = robotText;
+            document.getElementById('student-text').textContent = studentText;
+
+            document.getElementById('robot-audio-button').onclick = function() {
+                speakText(robotText);
+            };
+
+            document.getElementById('student-audio-button').onclick = function() {
+                speakText(studentText);
+            };
+
+            startIdleTimer();
+        }
+
+        function previousDialogue() {
+            if (currentDialogueIndex > 0) {
+                currentDialogueIndex--;
+                updateDialogue(currentDialogueIndex);
+            }
+        }
+
+        function nextDialogue() {
+            if (currentDialogueIndex < dialogues.length - 1) {
+                currentDialogueIndex++;
+                updateDialogue(currentDialogueIndex);
+            }
+        }
+
+        function startIdleTimer() {
+            clearTimeout(idleTimer);
+            idleTimer = setTimeout(function() {
+                robotImg.src = '../../../../../imagens/robo2.gif';
+                setTimeout(function() {
+                    robotImg.src = '../../../../../imagens/robo1_static.png';
+                }, 10000);
+            }, 15000);
         }
 
         function checkCompletion() {
-            // Supondo que essa função verifica se todos os requisitos da fase foram atendidos.
-            const allRequirementsMet = true;  // Ajuste conforme a lógica de verificação real.
-
-            if (allRequirementsMet) {
+            if (dialoguesRead === totalDialogues) {
                 showModal();
-                ensureUserIsAuthenticated(updateNextPhase);
+                updateNextPhase();
             }
-        }
-
-        function ensureUserIsAuthenticated(callback) {
-            firebase.auth().onAuthStateChanged(function (user) {
-                if (user) {
-                    callback(user.uid);
-                } else {
-                    console.error("Usuário não autenticado");
-                }
-            });
-        }
-
-        async function updateNextPhase(userId) {
-            const currentPhase = getPhaseFromURL();
-            const { level, unit } = getLevelAndUnitFromURL();
-            const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
-
-            try {
-                if (currentPhase === "last") {
-                    const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
-                    await firebase.database().ref(`usuarios/${userId}/progresso/${level}/${nextUnit}`).set({
-                        fase1: true
-                    });
-                    console.log(`Unidade ${nextUnit} liberada no ${level}`);
-                } else if (currentPhase === "end") {
-                    const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
-                    await firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({
-                        fase1: true
-                    });
-                    console.log(`Nível ${nextLevel} e Unit1 liberados`);
-                } else {
-                    const nextPhase = parseInt(currentPhase) + 1;
-                    const updates = {};
-                    updates[`fase${currentPhase}`] = true;
-                    updates[`fase${nextPhase}`] = true;
-
-                    await dbRef.update(updates);
-                    console.log(`Fase ${currentPhase} concluída e fase ${nextPhase} liberada no banco de dados.`);
-                }
-            } catch (error) {
-                console.error("Erro ao atualizar o progresso da fase:", error);
-            }
-        }
-
-        function getPhaseFromURL() {
-            const params = new URLSearchParams(window.location.search);
-            return params.get('fase');
-        }
-
-        function getLevelAndUnitFromURL() {
-            const url = window.location.pathname;
-            const parts = url.split('/');
-            const level = parts[1];
-            const unit = parts[2];
-            return { level, unit };
         }
 
         function showModal() {
@@ -243,8 +333,56 @@
             document.getElementById('overlay').style.display = 'none';
         }
 
-        function goBack() {
-            window.history.back();
+        function fetchUserAvatar(userId) {
+            const avatarRef = firebase.database().ref(`usuarios/${userId}`);
+            avatarRef.once('value')
+                .then(snapshot => {
+                    const userData = snapshot.val();
+                    if (userData && userData.avatar) {
+                        // Ajustar o caminho do avatar considerando que o diretório está um nível abaixo
+                        const avatarUrl = `../../../../imagens/${userData.avatar}`;
+                        const img = new Image();
+                        img.src = avatarUrl;
+                        img.onload = function() {
+                            studentImg.src = avatarUrl; // Usa o avatar do usuário se ele existir e estiver acessível
+                        };
+                        img.onerror = function() {
+                            console.error("Erro ao carregar o avatar do usuário. Usando o avatar padrão.");
+                        };
+                    } else {
+                        console.log("Usuário não possui avatar definido. Usando avatar padrão.");
+                    }
+                })
+                .catch(error => {
+                    console.error("Erro ao buscar o avatar do usuário:", error);
+                });
+        }
+
+        function updateNextPhase() {
+            const user = firebase.auth().currentUser;
+            if (user) {
+                const userId = user.uid;
+                const { level, unit } = getLevelAndUnitFromURL();
+                const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
+
+                dbRef.update({ [`fase${currentDialogueIndex + 1}`]: true })
+                    .then(() => {
+                        console.log("Progresso atualizado com sucesso.");
+                    })
+                    .catch(error => {
+                        console.error("Erro ao atualizar o progresso da fase:", error);
+                    });
+            } else {
+                console.error("Usuário não autenticado. Não foi possível atualizar o progresso.");
+            }
+        }
+
+        function getLevelAndUnitFromURL() {
+            const url = window.location.pathname;
+            const parts = url.split('/');
+            const level = parts[1];
+            const unit = parts[2];
+            return { level, unit };
         }
     </script>
 </body>
