--- a/Level1/Unit1/Dialogo/index.html
+++ b/Level1/Unit1/Dialogo/index.html
@@ -319,7 +319,7 @@
         function checkCompletion() {
             if (dialoguesRead === totalDialogues) {
                 showModal();
-                updateNextPhase();
+                ensureUserIsAuthenticated(updateNextPhase);
             }
         }
 
@@ -358,22 +358,34 @@
                 });
         }
 
-        function updateNextPhase() {
-            const user = firebase.auth().currentUser;
-            if (user) {
-                const userId = user.uid;
-                const { level, unit } = getLevelAndUnitFromURL();
-                const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
+        function ensureUserIsAuthenticated(callback) {
+            firebase.auth().onAuthStateChanged(function(user) {
+                if (user) {
+                    callback(user.uid);
+                } else {
+                    console.error("Usuário não autenticado");
+                }
+            });
+        }
 
-                dbRef.update({ [`fase${currentDialogueIndex + 1}`]: true })
-                    .then(() => {
-                        console.log("Progresso atualizado com sucesso.");
-                    })
-                    .catch(error => {
-                        console.error("Erro ao atualizar o progresso da fase:", error);
-                    });
-            } else {
-                console.error("Usuário não autenticado. Não foi possível atualizar o progresso.");
+        function updateNextPhase(userId) {
+            const currentPhase = getPhaseFromURL();
+            const { level, unit } = getLevelAndUnitFromURL();
+            const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
+            
+            try {
+                if (currentPhase === "last") {
+                    const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
+                    dbRef.child(nextUnit).set({ fase1: true });
+                } else if (currentPhase === "end") {
+                    const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
+                    firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
+                } else {
+                    const nextPhase = parseInt(currentPhase) + 1;
+                    dbRef.update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
+                }
+            } catch (error) {
+                console.error("Erro ao atualizar o progresso da fase:", error);
             }
         }
 
@@ -383,6 +395,11 @@
             const level = parts[1];
             const unit = parts[2];
             return { level, unit };
+        }
+
+        function getPhaseFromURL() {
+            const params = new URLSearchParams(window.location.search);
+            return params.get('fase');
         }
     </script>
 </body>
