--- a/Level1/Unit1/TestQuizLeVeAB/index.html
+++ b/Level1/Unit1/TestQuizLeVeAB/index.html
@@ -355,7 +355,7 @@ firebase.auth().onAuthStateChanged(function(user) {
 
     // Cria e adiciona a imagem correspondente à questão
     const questionImage = document.createElement('img');
-    questionImage.src = `../imagem${currentQuestionIndex + 1}.png`;
+    questionImage.src = `images/imagem${currentQuestionIndex + 1}.png`;
     questionImage.alt = `Imagem para a questão ${currentQuestionIndex + 1}`;
     questionImage.style.width = '100%';
     questionImage.style.maxHeight = '300px';
