--- a/Level1/Unit1/StoryCards/index - Copy.html
+++ b/Level1/Unit1/StoryCards/index - Copy.html
@@ -45,7 +45,7 @@
                         document.getElementById("pdfButton").style.display = "block";
                     }
                 } else {
-                    console.log("No user is logged in.");
+                    console.log("Nenhum usuário logado.");
                 }
             });
         }
@@ -164,13 +164,29 @@
         // Função para iniciar ou parar a leitura do texto
         function toggleSpeech(text) {
             if (!('speechSynthesis' in window)) {
-                alert("Your browser does not support speech synthesis. Please enable it or use a compatible browser.");
+                alert("Seu navegador não suporta sintetização de voz. Por favor, habilite ou utilize um navegador compatível.");
                 return;
             }
 
             if (window.speechSynthesis.speaking) {
                 window.speechSynthesis.cancel();
             } else {
+                // Obter todas as vozes disponíveis e selecionar a voz americana
+                window.speechSynthesis.onvoiceschanged = () => {
+                    let voices = window.speechSynthesis.getVoices();
+                    let usVoice = voices.find(voice => voice.lang === 'en-US');
+
+                    if (usVoice) {
+                        let utterance = new SpeechSynthesisUtterance(text);
+                        utterance.voice = usVoice;
+                        utterance.lang = 'en-US';
+                        window.speechSynthesis.speak(utterance);
+                    } else {
+                        alert("Por favor, habilite uma voz em inglês no seu sintetizador de voz.");
+                    }
+                };
+
+                // Caso as vozes já estejam carregadas
                 let voices = window.speechSynthesis.getVoices();
                 let usVoice = voices.find(voice => voice.lang === 'en-US');
 
@@ -180,24 +196,7 @@
                     utterance.lang = 'en-US';
                     window.speechSynthesis.speak(utterance);
                 } else {
-                    alert("Please enable an English voice in your speech synthesizer.");
-                }
-
-                // Se as vozes ainda não estiverem carregadas, adicionar um listener para carregá-las
-                if (voices.length === 0) {
-                    window.speechSynthesis.onvoiceschanged = () => {
-                        voices = window.speechSynthesis.getVoices();
-                        usVoice = voices.find(voice => voice.lang === 'en-US');
-
-                        if (usVoice) {
-                            let utterance = new SpeechSynthesisUtterance(text);
-                            utterance.voice = usVoice;
-                            utterance.lang = 'en-US';
-                            window.speechSynthesis.speak(utterance);
-                        } else {
-                            alert("Please enable an English voice in your speech synthesizer.");
-                        }
-                    };
+                    alert("Por favor, habilite uma voz em inglês no seu sintetizador de voz.");
                 }
             }
         }
@@ -370,7 +369,7 @@
                         const { fase } = getParamsFromURL();
                         salvarProgressoAluno(user.uid, fase);
                     } else {
-                        console.log("No user is logged in.");
+                        console.log("Nenhum usuário logado.");
                     }
                 });
             }
