--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -30,6 +30,7 @@
         // Variáveis globais para o título e texto da história para o PDF
         let storyTitle = "Hannah Story"; // Exemplo de título para o PDF
         let storyText = ""; // Variável que irá conter o texto da história
+        let phaseCompleted = false; // Variável para verificar se a fase foi concluída
 
         // Função para verificar o role e exibir o botão PDF se o usuário for "professor" ou "proprietário"
         function checkUserRole() {
@@ -90,6 +91,7 @@
                     await dbRef.child(`${level}/${unit}/${nextFase}`).set(true);
                     console.log(`Fase ${nextFase} criada em ${level}/${unit}.`);
                 }
+                phaseCompleted = true; // Marca a fase como concluída
             } catch (error) {
                 console.error("Erro ao atualizar o progresso da fase:", error);
             }
@@ -201,6 +203,27 @@
                 }
             }
         }
+
+        // Função para interceptar a tentativa de sair da página
+        function confirmExit() {
+            if (!phaseCompleted) {
+                const userConfirmed = confirm("To complete the phase, you need to listen to the entire story. Do you want to leave without completing the phase? Press OK to leave or Cancel to stay.");
+                if (!userConfirmed) {
+                    return false; // Impede a saída da página
+                }
+            }
+        }
+
+        // Adiciona o evento de clique no botão Back
+        document.addEventListener("DOMContentLoaded", () => {
+            const backButton = document.querySelector("button[onclick='window.history.back()']");
+            if (backButton) {
+                backButton.onclick = (event) => {
+                    event.preventDefault();
+                    confirmExit() && window.history.back();
+                };
+            }
+        });
     </script>
 
     <style>
@@ -276,8 +299,8 @@
             position: absolute;
             top: 10px; /* Posiciona no topo */
             right: 10px; /* Posiciona na borda direita */
-            width: 30px;
-            height: 30px;
+            width: 90px;
+            height: 90px;
             cursor: pointer;
             background-color: rgba(255, 255, 255, 0.8);
             border-radius: 50%;
@@ -313,7 +336,7 @@
     </style>
 </head>
 <body>
-    <button onclick="window.history.back()">Back</button>
+    <button>Back</button>
 
     <div class="container">
         <h1>Hannah StoryCard</h1>
