--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -213,6 +213,14 @@
             return true;
         }
 
+        // Adiciona o evento para interceptar o fechamento ou recarregamento da página
+        window.addEventListener("beforeunload", function (event) {
+            if (!phaseCompleted) {
+                event.preventDefault();
+                event.returnValue = "To complete the phase, you need to listen to the entire story. Do you want to leave without completing the phase?";
+            }
+        });
+
         // Adiciona o evento de clique no botão Back
         document.addEventListener("DOMContentLoaded", () => {
             const backButton = document.querySelector("button");
