--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -92,6 +92,7 @@
                     console.log(`Fase ${nextFase} criada em ${level}/${unit}.`);
                 }
                 phaseCompleted = true; // Marca a fase como concluída
+                console.log("Phase marked as completed.");
             } catch (error) {
                 console.error("Erro ao atualizar o progresso da fase:", error);
             }
@@ -172,6 +173,7 @@
 
             if (window.speechSynthesis.speaking) {
                 window.speechSynthesis.cancel();
+                console.log("Speech synthesis stopped.");
             } else {
                 let voices = window.speechSynthesis.getVoices();
                 let usVoice = voices.find(voice => voice.lang === 'en-US');
@@ -180,9 +182,11 @@
                     let utterance = new SpeechSynthesisUtterance(text);
                     utterance.voice = usVoice;
                     utterance.lang = 'en-US';
+                    console.log("Speaking with voice: ", usVoice.name);
                     window.speechSynthesis.speak(utterance);
                 } else {
                     alert("Please enable an English voice in your speech synthesizer.");
+                    console.log("English voice not found in synthesizer.");
                 }
 
                 // Se as vozes ainda não estiverem carregadas, adicionar um listener para carregá-las
@@ -195,9 +199,11 @@
                             let utterance = new SpeechSynthesisUtterance(text);
                             utterance.voice = usVoice;
                             utterance.lang = 'en-US';
+                            console.log("Speaking with voice after loading: ", usVoice.name);
                             window.speechSynthesis.speak(utterance);
                         } else {
                             alert("Please enable an English voice in your speech synthesizer.");
+                            console.log("English voice not found after voices changed.");
                         }
                     };
                 }
@@ -206,8 +212,10 @@
 
         // Função para interceptar a tentativa de sair da página
         function confirmExit() {
+            console.log("Phase completed status: ", phaseCompleted);
             if (!phaseCompleted) {
                 const userConfirmed = window.confirm("To complete the phase, you need to listen to the entire story. Do you want to leave without completing the phase?");
+                console.log("User confirmed exit: ", userConfirmed);
                 return userConfirmed;
             }
             return true;
@@ -215,6 +223,7 @@
 
         // Adiciona o evento para interceptar o fechamento ou recarregamento da página
         window.addEventListener("beforeunload", function (event) {
+            console.log("beforeunload event triggered. Phase completed: ", phaseCompleted);
             if (!phaseCompleted) {
                 event.preventDefault();
                 event.returnValue = "To complete the phase, you need to listen to the entire story. Do you want to leave without completing the phase?";
@@ -227,8 +236,12 @@
             if (backButton) {
                 backButton.addEventListener("click", (event) => {
                     event.preventDefault();
+                    console.log("Back button clicked. Phase completed: ", phaseCompleted);
                     if (confirmExit()) {
+                        console.log("Navigating back.");
                         window.history.back();
+                    } else {
+                        console.log("User chose to stay on the page.");
                     }
                 });
             }
@@ -415,18 +428,21 @@
         // Função para exibir o próximo card
         function showNextCard() {
             currentCardIndex = (currentCardIndex + 1) % cardsData.length;
+            console.log("Showing next card. Current index: ", currentCardIndex);
             displayCard(currentCardIndex);
         }
 
         // Função para exibir o card anterior
         function showPreviousCard() {
             currentCardIndex = (currentCardIndex - 1 + cardsData.length) % cardsData.length;
+            console.log("Showing previous card. Current index: ", currentCardIndex);
             displayCard(currentCardIndex);
         }
 
         // Função para inicializar a página com o primeiro card
         async function init() {
             cardsData = await loadContent();
+            console.log("Cards data loaded: ", cardsData);
             displayCard(0);
         }
 
